feat: fix DNAFND-581 - consolidated changes for Hawk SR/DM pipeline